<resources>
    <string name="app_name">TravelBook</string>
    <string name="forgot_password">forgot_password</string>
    <string name="login">login</string>
    <string name="REGISTER">REGISTER</string>
    <string name="TRAVELOPTIONS">TRAVEL OPTIONS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PLACE">PLACE:</string>
    <string name="ENTERPLACE">ENTER PLACE</string>
    <string name="STARTDATE">START DATE:</string>
    <string name="ENDDATE">END DATE</string>
    <string name="ADD">ADD</string>
    <string name="NAME">NAME</string>
    <string name="EnterHotelName">enter hotel name</string>
    <string name="ADDRESS">ADDRESS</string>
    <string name="EnterAddress">ENTER ADDRESS</string>
    <string name="DELETE">DELETE</string>
    <string name="HOTELNAME">HOTEL NAME:</string>
    <string name="DEL">DEL</string>
    <string name="DailyCharges">DAILY CHARGES:</string>
    <string name="MODE">MODE</string>
    <string name="Charges">Charges</string>
    <string name="TIME">TIME:</string>
    <string name="OK">OK</string>
    <string name="FOODNAME">FOOD NAME:</string>
    <string name="PLACENAME">PLACE NAME:</string>
    <string name="ADD_SUCCESSFUL">ADD_SUCCESSFUL</string>
    <string name="delete">Delete</string>
    <string name="TOURPLACE">Tour Place</string>
    <string name="memories">Memories</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
</resources>